# virtualretina

./: README.md  README.txt  download_build_all.bash
External_Libraries/mvaspike-1.0.17/: INSTALL.SH  Makefile.am  Makefile.in  configure  configure.ac
External_Libraries/mvaspike-1.0.17/examples/: tutorial3.cc  tutorial4.cc
External_Libraries/mvaspike-1.0.17/include/mvaspike/: connections.h  flatten_in.h  ifacebase.h  memspikerecorder.h  phase.h  root.h  wstatic.h
External_Libraries/mvaspike-1.0.17/src/: alltoall.cc  alltoall.h  basecoupled.h  connections.cc  coupled.cc  dcoupled.cc  devsiterator.cc  error.cc  error.h  event.cc  flatten_out.cc  flow.cc  freecon.cc  internal_lif.cc  lif.h  log_encoder.h  neuron.cc  pq.cc  pq.h  rng_simple.cc  rng_simple.h  spiketrains.cc  spontaneous.h  stdp.cc  stdp.h  stdpexp.h  stdplif.cc  warray.cc  warray.h  wstatic.cc
External_Libraries/mvaspike-1.0.17_cmake/: CMakeLists.txt
External_Libraries/mvaspike-1.0.17_cmake/examples/: Makefile.am  Makefile.in  discrtime.cc  tutorial1.cc  tutorial2.cc  tutorial_rnd.cc
External_Libraries/mvaspike-1.0.17_cmake/src/: Makefile.am  Makefile.in  baserecorder.cc  baserecorder.h  clock.cc  clock.h  containercoupled.cc  containercoupled.h  coupled.h  dconnections.cc  dconnections.h  dcoupled.h  devs.cc  devs.h  devsiterator.h  event.h  eventiterator.h  extspiketrain.cc  extspiketrain.h  flatten_in.cc  flatten_out.h  flow.h  freecon.h  freedcon.cc  freedcon.h  iface.cc  iface.h  internal_lif.h  ipoisson.cc  ipoisson.h  log_encoder.cc  memspikerecorder.cc  models.h  mvaspike.h  neuron.h  one_shot.cc  one_shot.h  phase.cc  poisson.cc  poisson.h  (+38 more)
External_Libraries/mvaspike_hdf5/: Makefile  README  h5wrapper.c  h5wrapper.h  hdf5memspikerecorder.cc  hdf5memspikerecorder.h  mvaspike_hdf5.h  test1.cc  test2.cc  test3.c
External_Libraries/xmlParameters++-1.1.1/: CHANGES.txt  CMakeLists.txt  README  cmake_install.cmake  install_manifest.txt
External_Libraries/xmlParameters++-1.1.1/Example/: CMakeLists.txt  README  Test_Bus.cc  bus_definition.xml  cmake_install.cmake  sample_classes.h  sample_classes_withXMLcode.h
External_Libraries/xmlParameters++-1.1.1/include/xmlparameters++/: initfunctor.h  xmlobject_container_specialisation.h  xmlobject_pointer_specialisation.h  xmlparameters_template_code.h
External_Libraries/xmlParameters++-1.1.1/src/: xmlfactory.h  xmlobject.h  xmlobject_base.cc  xmlobject_base.h  xmlparameters.cc  xmlparameters.h
VirtualRetina/: CHANGES.txt  CMakeLists.txt  README
VirtualRetina/ext-lib-links/: info.txt
VirtualRetina/src/: CMakeLists.txt  README  basemapfilter.cc  basemapfilter.h  baserecfilter.cc  baserecfilter.h  basespikingchannel.cc  basespikingchannel.h  basespikingchannel_adap.cc  basespikingchannel_adap.h  cellporthandler.h  condcellmap.cc  condcellmap.h  fixationalmovement.cc  fixationalmovement.h  instantsynapse.cc  instantsynapse.h  logpolarscheme.cc  logpolarscheme.h  pulse_coupled.cc  pulse_coupled.h  radialfilter.cc  radialfilter.h  radialscheme.cc  radialscheme.h  rd_sampling.cc  rd_sampling.h  recfilter.cc  recfilter.h  reconstruct.cc  reconstruct.h  retina.cc  retina.h  retina_spikingchannels.cc  retina_spikingchannels.h  retinamapfilter.cc  retinamapfilter.h  spik_units.cc  spik_units.h  sq_sampling.cc  (+1 more)
VirtualRetina/src/appli/: CMakeLists.txt  Grating.cc  ReconstructRetina.cc  ReconstructRetina_main.cc  Retina.cc  Retina_main.cc  TestGanglionCell.cc  TestGanglionCell_main.cc  lumImage.cc  shapleyVictor.cc  viewVideo.cc
VirtualRetina/src/retinatools/: CMakeLists.txt  cimg_signal_drawer.cc  cimg_signal_drawer.h  cimg_tools.cc  cimg_tools.h  cmake_install.cmake  misc_tools.cc  misc_tools.h  my_tools.h  randomness.cc  randomness.h  signal_tools.cc  signal_tools.h
VirtualRetina/test/retina_files/: EXAMPLE_cat_X_cell.xml  EXAMPLE_linear_noSpikes.xml  EXAMPLE_primate_ParvoMagno.xml
VirtualRetina/test/sequences/: rocks_2contrasts.pgm
VirtualRetina/test/sequences/walking_finland/: finland.1000.pgm  finland.1001.pgm  finland.1002.pgm  finland.1003.pgm  finland.1004.pgm  finland.1005.pgm  finland.1006.pgm  finland.1007.pgm  finland.1008.pgm  finland.1009.pgm  finland.1010.pgm  finland.1011.pgm  finland.1012.pgm  finland.1013.pgm  finland.1014.pgm  finland.1015.pgm  finland.1016.pgm  finland.1017.pgm  finland.1018.pgm  finland.1019.pgm  finland.1020.pgm  finland.1021.pgm  finland.1022.pgm  finland.1023.pgm  finland.1024.pgm  finland.1025.pgm  finland.1026.pgm  finland.1027.pgm  finland.1028.pgm  finland.1029.pgm  finland.1030.pgm  finland.1031.pgm  finland.1032.pgm  finland.1033.pgm  finland.1034.pgm  finland.1035.pgm  finland.1036.pgm  finland.1037.pgm  finland.1038.pgm  finland.1039.pgm  (+16 more)
