AM_CXXFLAGS = -I ../src
noinst_PROGRAMS = tutorial1 tutorial2 tutorial3 tutorial4 discrtime tutorialrnd

tutorial1_SOURCES = tutorial1.cc
tutorial1_LDADD = ../src/libmvaspike.la

tutorial2_SOURCES = tutorial2.cc
tutorial2_LDADD = ../src/libmvaspike.la

tutorial3_SOURCES = tutorial3.cc
tutorial3_LDADD = ../src/libmvaspike.la

tutorial4_SOURCES = tutorial4.cc
tutorial4_LDADD = ../src/libmvaspike.la

discrtime_SOURCES = discrtime.cc
discrtime_LDADD = ../src/libmvaspike.la

tutorialrnd_SOURCES = tutorial_rnd.cc
tutorialrnd_LDADD = ../src/libmvaspike.la
