lib_LTLIBRARIES = libmvaspike.la

libmvaspike_la_SOURCES =  alltoall.cc  \
alltoall.h  \
basecoupled.h  \
baserecorder.cc  \
baserecorder.h  \
clock.cc  \
clock.h  \
connections.cc  \
connections.h  \
containercoupled.cc  \
containercoupled.h  \
coupled.cc  \
coupled.h  \
dconnections.cc  \
dconnections.h  \
dcoupled.cc  \
dcoupled.h  \
devs.cc  \
devs.h  \
devsiterator.cc  \
devsiterator.h  \
error.cc  \
error.h  \
event.cc  \
event.h  \
eventiterator.h  \
extspiketrain.cc  \
extspiketrain.h  \
flatten_in.cc  \
flatten_in.h  \
flatten_out.cc  \
flatten_out.h  \
flow.cc  \
flow.h  \
freecon.cc  \
freecon.h  \
freedcon.cc  \
freedcon.h  \
iface.cc  \
iface.h  \
ifacebase.h  \
internal_lif.cc  \
internal_lif.h  \
ipoisson.cc  \
ipoisson.h  \
lif.h  \
log_encoder.cc  \
log_encoder.h  \
memspikerecorder.cc  \
memspikerecorder.h  \
models.h  \
neuron.cc  \
neuron.h  \
one_shot.cc  \
one_shot.h  \
phase.cc  \
phase.h  \
poisson.cc  \
poisson.h  \
pq.cc  \
pq.h  \
pqf.cc  \
pqf.h  \
pqf_heap.cc  \
pqf_heap.h  \
random.cc  \
random.h  \
recorder.cc  \
recorder.h  \
rng.cc  \
rng.h  \
rng_gsl_mt.cc  \
rng_gsl_mt.h  \
rng_libc.cc  \
rng_libc.h  \
rng_simple.cc  \
rng_simple.h  \
root.cc  \
root.h  \
sensor.cc  \
sensor.h  \
simpledconnection.h  \
simpleiface.cc  \
simpleiface.h  \
simplenet.h  \
spikerecorder.cc  \
spikerecorder.h  \
spiketrain.cc  \
spiketrain.h  \
spiketrains.cc  \
spiketrains.h  \
spontaneous.cc  \
spontaneous.h  \
stdp.cc  \
stdp.h  \
stdp2.cc  \
stdp2.h  \
stdp_rbt.cc  \
stdp_rbt.h  \
stdpexp.cc  \
stdpexp.h  \
stdpf.cc  \
stdpf.h  \
stdplif.cc  \
stdplif.h  \
streamspiketrains.cc  \
streamspiketrains.h  \
warray.cc  \
warray.h  \
weightedinput.h  \
wstatic.cc  \
wstatic.h  \
mvaspike.h

fooincludedir = $(includedir)/mvaspike
fooinclude_HEADERS = alltoall.h  \
basecoupled.h  \
baserecorder.h  \
clock.h  \
connections.h  \
containercoupled.h  \
coupled.h  \
dconnections.h  \
dcoupled.h  \
devs.h  \
devsiterator.h  \
error.h  \
event.h  \
eventiterator.h  \
extspiketrain.h  \
flatten_in.h  \
flatten_out.h  \
flow.h  \
freecon.h  \
freedcon.h  \
iface.h  \
ifacebase.h  \
internal_lif.h  \
ipoisson.h  \
lif.h  \
log_encoder.h  \
memspikerecorder.h  \
models.h  \
neuron.h  \
one_shot.h  \
phase.h  \
poisson.h  \
pq.h  \
pqf.h  \
pqf_heap.h  \
random.h  \
recorder.h  \
rng.h  \
rng_gsl_mt.h  \
rng_libc.h  \
rng_simple.h  \
root.h  \
sensor.h  \
simpledconnection.h  \
simpleiface.h  \
simplenet.h  \
spikerecorder.h  \
spiketrain.h  \
spiketrains.h  \
spontaneous.h  \
stdp.h  \
stdp2.h  \
stdp_rbt.h  \
stdpexp.h  \
stdpf.h  \
stdplif.h  \
streamspiketrains.h  \
warray.h  \
weightedinput.h  \
wstatic.h  \
mvaspike.h

